--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:postgres@localhost/mybalance
+sqlalchemy.url = driver://user:pass@localhost/mybalance
 
 
 [post_write_hooks]
